EGC-605 - fixes sonar issues